--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "karma-firefox-launcher": "~0.1.3",
     "karma-chrome-launcher": "~0.1.3",
     "karma-coverage": "~0.2.1",
-    "grunt-protractor-runner": "~0.2.4"
+    "grunt-protractor-runner": "~0.2.4",
+    "grunt-exec": "~0.4.5"
   },
   "scripts": {
     "postinstall": "bower install",
